--- a/css/CSS Grid/style.css
+++ b/css/CSS Grid/style.css
@@ -1,19 +1,29 @@
+html {
+    height: 100%;
+}
 body {
     background-color: #efefef;
+    margin: 0;
+    height: 100%;
 }
 
 .grid {
     display: grid;
-    grid-template-rows:  repeat(2, [row-inicio] 50px [row-fin]);
-    grid-template-columns: repeat(3, [col-inicio] 1fr [col-fin]);
-    grid-gap: 20px;
+    width: 100%;
+    height: 100%;
+/*     grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%; */
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows:  repeat(3, 150px);
+    grid-gap: 10px;
+    justify-content: center;
+    align-content: center;
+/*     justify-items: center;
+    align-items: center; */
+    justify-content: space-evenly;
+/*     align-content: space-between; */
 }
 
 .element {
     background-color: tomato;
-}
- 
-.header {
-    grid-column: col-inicio / col-fin 3;
-    grid-row: row-inicio / row-fin 3;
 }
